--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,8 +3,8 @@ layout: default
 ---
 <article class="post">
 
-  <header class="post-header">
-    <h1 class="post-title">{{ page.title | escape }}</h1>
+  <header class="page-header">
+    <h1 class="page-title">{{ page.title | escape }}</h1>
   </header>
 
   <div class="post-content">
