--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -180,8 +180,22 @@
   flex: 1;
 }
 
+.page-header {
+  margin-bottom: $spacing-unit;
+  background-color: #12bbad;
+  padding: 10px 5px 5px 20px;
+  border-radius: 10px;
+  border: 3px solid #212529;
+}
+
+h1.page-title {
+  font-weight: bold;
+
+}
+
 .page-heading {
   @include relative-font-size(2);
+  
 }
 
 .post-list-heading {
@@ -217,11 +231,12 @@
  */
 .post-header {
   margin-bottom: $spacing-unit;
+  /*
   background-color: #12bbad;
   padding: 10px 5px 5px 20px;
   border-radius: 10px; 
   border: 3px solid #212529;
-
+  */
 
 }
 
