--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,7 +9,11 @@
     <p class="text-center">
       CyberTraining: Pilot: HPC ED: Building a Federated Repository and Increasing Access through Cybertraining
       is supported by NSF grant <a
-        href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2320977&HistoricalAwards=false">OAC-2320977</a></span>
+        href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2320977&HistoricalAwards=false">OAC-2320977</a>
+      <br>
+      <strong>Contact Us:</strong> <a
+      href="mailto:hpc.edu.train@gmail.com">hpc.edu.train@gmail.com</a>
+      </span>
       <br />
       <span style="font-size: .8em;">&copy;
         <script type="text/javascript">
