added guides to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,6 +20,10 @@
       <li class="nav-item">
         <a class="nav-link" href="/events">Events</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href="https://github.com/HPC-ED/HPC-ED.github.io/wiki">Guides</a>
+      </li>
+
 
       <!--
           <li class="nav-item active">
