--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,16 +18,61 @@ layout: default
   {% if date < now %} <li>
     {%- assign date_format = site.minima.date_format | default: "%b %-d, %Y" -%}
     <span class="post-meta">{{ post.date | date: date_format }}</span>
-    <h3>
-      {% if post.content.size <= 1 %} <a class="post-link" href="{{ post.eventurl }}">
-        {{ post.title | escape }}
-        </a>
-        {% else %}
-        <a class="post-link" href="{{ post.url }}">
-          {{ post.title | escape }}
-        </a>
+    <div>
+      <div>
+        {% if post.image %}
+          <img src="{{ post.image }}" alt="{{ post.image_description }}"/>
         {% endif %}
-    </h3>
+      </div>
+      <div>
+        <h3>
+          {% if post.content.size <= 1 %} <a class="post-link" href="{{ post.eventurl }}">
+            {{ post.title | escape }}
+            </a>
+            {% else %}
+            <a class="post-link" href="{{ post.url }}">
+              {{ post.title | escape }}
+            </a>
+            {% endif %}
+        </h3>
+        {% if post.presenters %}
+          <p><strong>Presenter(s):</strong>
+            {% for name in post.presenters %}
+                {% if forloop.last %}
+                
+                    {{ name }}
+                  
+                {% else %}
+                  
+                    {{ name }},
+                  
+                {% endif %}
+            {% endfor %}
+          
+          {% if post.abstract %}
+            <br>
+            {{ post.abstract }}
+          {% endif%}
+          <br>
+          {% if post.files %}
+            <br>
+            <strong style="font-size: small;">
+            
+            {% for file in post.files %}
+              <a href="{{ file | prepend: url}}">Presentation File</a>
+
+            {% endfor %}
+            
+          </strong>
+          {% endif%}
+            
+          </p>
+          <hr>
+        {% endif %}
+      </div>
+    </div>
+    
+    
     {%- if site.show_excerpts -%}
     {{ post.excerpt }}
     {%- endif -%}
