added consistent event url and adjusted link requirements

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -26,7 +26,7 @@ layout: default
       </div>
       <div>
         <h3>
-          {% if post.content.size <= 1 %} <a class="post-link" href="{{ post.eventurl }}">
+          {% if post.content.size <= 1 and post.abstract %} <a class="post-link" href="{{ post.eventurl }}">
             {{ post.title | escape }}
             </a>
             {% else %}
@@ -63,8 +63,15 @@ layout: default
 
             {% endfor %}
             
-          </strong>
+          </strong> | 
           {% endif%}
+
+          {% if post.eventurl %}
+          <strong style="font-size: small;">
+        
+          <a href="{{ post.eventurl }}">Event URL</a>
+          </strong>
+        {% endif %}
             
           </p>
           <hr>
