--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,26 +1,21 @@
 <footer class="site-footer h-card">
-  <data class="u-url" href="{{ "/" | relative_url }}"></data>
+  <data class="u-url" href='{{ " /" | relative_url }}'></data>
 
   <div class="wrapper">
 
-
-
-    
     <p class="text-center">
       CyberTraining: Pilot: HPC ED: Building a Federated Repository and Increasing Access through Cybertraining
       is supported by NSF grant <a
         href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2320977&HistoricalAwards=false">OAC-2320977</a>
       <br>
-      <strong>Contact Us:</strong> <a
-      href="mailto:hpc.edu.train@gmail.com">hpc.edu.train@gmail.com</a>
+      <strong>Contact Us:</strong> <a href="mailto:hpc.edu.train@gmail.com">hpc.edu.train@gmail.com</a>
       </span>
       <br />
       <span style="font-size: .8em;">&copy;
         <script type="text/javascript">
-              < !-
-                  var d = new Date();
+          var d = new Date();
           document.write(d.getFullYear());
-          //--></script> Cornell University
+        </script> Cornell University
     </p>
 
   </div>
