--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,18 +12,18 @@ layout: default
 
       </time>
 
-   
-      
+
+
 
       {%- if page.associated_event -%}
 
-        {%- if page.associated_event.size > 1 -%}
-        •  <a href="{{ page.associated_event[1]}}"> {{ page.associated_event[0] }}</a> 
-        {%- else -%}
-        •  {{ page.associated_event[0] }} 
+      {%- if page.associated_event.size > 1 -%}
+      • <a href="{{ page.associated_event[1]}}"> {{ page.associated_event[0] }}</a>
+      {%- else -%}
+      • {{ page.associated_event[0] }}
 
-        {%- endif -%}
-      
+      {%- endif -%}
+
       {%- endif -%}
 
       {%- if page.location -%}
@@ -31,72 +31,76 @@ layout: default
       {%- endif -%}
 
       {%- if page.author -%}
-        {%- if page.author.size == 1 -%}
-        <br> &nbsp;Author: <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
-        {%- else -%}
-          <br> Authors:&nbsp;
-          {%- for author in page.author -%}
-          {% if forloop.last %}
-           <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ author }}</span></span>
-          {% else %}
-          <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card" itemprop="name">{{ author }}, </span></span>
-          {% endif %}
-           {%- endfor -%}
-        {%- endif -%}
-      {%- endif -%}</p>
+      {%- if page.author.size == 1 -%}
+      <br> &nbsp;Author: <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span
+          class="p-author h-card" itemprop="name">{{ page.author }}</span></span>
+      {%- else -%}
+      <br> Authors:&nbsp;
+      {%- for author in page.author -%}
+      {% if forloop.last %}
+      <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card"
+          itemprop="name">{{ author }}</span></span>
+      {% else %}
+      <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span class="p-author h-card"
+          itemprop="name">{{ author }}, </span></span>
+      {% endif %}
+      {%- endfor -%}
+      {%- endif -%}
+      {%- endif -%}
+    </p>
   </header>
 
   <div class="post-content e-content" itemprop="articleBody">
     <p>
 
       {% if page.presenters %}
-        <em> 
-          {% if page.presenters.size > 1 %}
-          Presenters:
-          {% else %}
-          Presenter:
-          {% endif %}
-        </em>
+      <em>
+        {% if page.presenters.size > 1 %}
+        Presenters:
+        {% else %}
+        Presenter:
+        {% endif %}
+      </em>
 
-        {% for presenter in page.presenters %}
-            {% if forloop.last %}
-              {{ presenter }}
-            {% else %}
-            {{ presenter }},
-            {% endif %} 
-        {% endfor %}
+      {% for presenter in page.presenters %}
+      {% if forloop.last %}
+      {{ presenter }}
+      {% else %}
+      {{ presenter }},
       {% endif %}
-      </p>
-      
-      
-      {% if page.image %}
-      
-        <img src="/{{ page.image }}" alt="{{ page.image_description }}" class="rounded mx-auto d-block">
-        <br><br>
+      {% endfor %}
       {% endif %}
-      
-      
-      {% if page.abstract %}
-        <h3>Abstract</h3>
-      <p>
-        {{ page.abstract }}
-      </p>
-      {% endif %}
-      
+    </p>
 
-      {% if page.files %}
-          <em>Files:</em>
-          {% for file in page.files %}
-              <a href="{{ file | absolute_url }}">{{ file | split: "/" | last }}</a>
-          {% endfor %}
-      {% endif %}
+
+    {% if page.image %}
+
+    <img src="/{{ page.image }}" alt="{{ page.image_description }}" class="rounded mx-auto d-block">
+    <br><br>
+    {% endif %}
+
+
+    {% if page.abstract %}
+    <h3>Abstract</h3>
+    <p>
+      {{ page.abstract }}
+    </p>
+    {% endif %}
+
+
+    {% if page.files %}
+    <em>Files:</em>
+    {% for file in page.files %}
+    <a href="{{ file | absolute_url }}">{{ file | split: "/" | last }}</a>
+    {% endfor %}
+    {% endif %}
 
 
     {{ content }}
   </div>
 
   {%- if site.disqus.shortname -%}
-    {%- include disqus_comments.html -%}
+  {%- include disqus_comments.html -%}
   {%- endif -%}
 
   <a class="u-url" href="{{ page.url | relative_url }}" hidden></a>
