Update index.md for minor changes

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,15 +4,17 @@
   <div class="wrapper">
 
     <p class="text-center">
-      CyberTraining: Pilot: HPC ED: Building a Federated Repository and Increasing Access through Cybertraining
+      CyberTraining: Pilot: HPC ED: Building a Federated Repository and
+      Increasing Access through CyberTraining
       is supported by NSF grant <a
         href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=2320977&HistoricalAwards=false">OAC-2320977</a>
       <br>
-      <strong>Contact Us:</strong> <a href="mailto:hpc.edu.train@gmail.com">hpc.edu.train@gmail.com</a>
-      </span>
-      <br />
-      <span style="font-size: .8em;">&copy;
-        <script type="text/javascript">
+      <strong>Contact Us:</strong> <a
+        href="mailto:hpc.edu.train@gmail.com">hpc.edu.train@gmail.com</a>
+    </span>
+    <br />
+    <span style="font-size: .8em;">&copy;
+      <script type="text/javascript">
           var d = new Date();
           document.write(d.getFullYear());
         </script> Cornell University
