--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,9 @@
           <a class="nav-link" href="/">HPC-ED Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="https://search-pilot.operations.access-ci.org/hpc-ed-v2/about/">Portal Tool</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/events">Events</a>
         </li>
         <li class="nav-item">
