--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
           <a class="nav-link" href="https://search-pilot.operations.access-ci.org/hpc-ed-v2/about/">Portal Tool</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/events">Events</a>
+          <a class="nav-link" href="/news-events">News/Events</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://github.com/HPC-ED/HPC-ED.github.io/wiki">Guides</a>
